# rainworld

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  nix_ci.yml  rust_ci.yml
backend/: Cargo.toml  default.nix
backend/src/: arg_parse.rs  database.rs  hardware.rs  interval_readings.rs  main.rs
backend/src/database/: client.rs  field.rs  line_protocol.rs  mod.rs  response.rs  tag.rs
esp32/: Cargo.toml  default.nix  sdkconfig.defaults
esp32/.cargo/: config.toml
esp32/src/: config.rs  main.rs  plant_with_hardware.rs  sensors.rs  server.rs  time.rs  wifi.rs
frontend/: Cargo.toml  default.nix
frontend/src/: app.rs  graph.rs  interactivity_test.rs  lib.rs  plantbox.rs
shared/: Cargo.toml
shared/src/: backend.rs  esp32.rs  lib.rs  plant.rs
shared/src/esp32/: error.rs  mod.rs  plant.rs  plant_status.rs  scientific_plant_name.rs
