[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rainworld-backend"
path = "./src/main.rs"

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.27"
axum = "0.8.4"
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "2.0.12"
serde_json = "1.0.141"
url = "2.5.4"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
